# metannet

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yaml  default-metannet.toml  main.py  metannet.toml  pyproject.toml
metannet/: app.py  config.py  segmenter.py  transcriber.py  voicevox.py  web.py
metannet/static/: index.html
