[project]
name = "metannet"
version = "0.1.0"
description = "Mic speech -> Whisper STT -> VOICEVOX TTS for streaming without exposing your real voice"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2.1",
    "openai-whisper>=20250625",
    "silero-vad>=5.1",
    "sounddevice>=0.5.3",
    "requests>=2.32",
    "websockets>=12.0",
]

[project.scripts]
metannet = "metannet.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["metannet"]
